<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.carinfo.view.CarInfo"
    android:background="@color/background"
    android:padding="5sp">
    
    <LinearLayout
        android:id="@+id/book_name_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf
            ="@id/book_author_linear_layout"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/book_name_label"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/car_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_author_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@+id/book_name_linear_layout"
        app:layout_constraintBottom_toTopOf
            ="@+id/book_year_linear_layout"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/book_author_label"/>

        <TextView
            android:id="@+id/car_engine_volume_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/book_year_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@+id/book_author_linear_layout"
        app:layout_constraintBottom_toTopOf
            ="@+id/book_genre_linear_layout"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/book_year_label"/>

        <TextView
            android:id="@+id/car_speed_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_genre_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@+id/book_year_linear_layout"
        app:layout_constraintBottom_toTopOf
            ="@id/edit_data_button"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/book_genre_label"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/car_year_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/edit_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_data_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@id/book_genre_linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="17sp"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>


