<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.BookInfo"
    android:background="@color/background"
    android:padding="5sp">

    <LinearLayout
        android:id="@+id/edit_book_name_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf
            ="@id/edit_book_author_linear_layout"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/edit_book_name_label"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/book_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_book_author_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@+id/edit_book_name_linear_layout"
        app:layout_constraintBottom_toTopOf
            ="@+id/edit_book_year_linear_layout"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/edit_book_author_label"/>

        <EditText
            android:id="@+id/book_author_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/edit_book_year_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@+id/edit_book_author_linear_layout"
        app:layout_constraintBottom_toTopOf
            ="@+id/edit_book_genre_linear_layout"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/edit_book_year_label"/>

        <EditText
            android:id="@+id/book_year_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_book_genre_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf=
            "@+id/edit_book_year_linear_layout"
        app:layout_constraintBottom_toTopOf="@id/save_data_button"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_book_genre_label"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/book_genre_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf
            ="@id/edit_book_genre_linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


